Navigation 2.1.8

	* Updated some minor things to keep up to date with Core 2.5.7
	-- Charlie Powell <charlie@eval.bz>  Wed, 12 Jun 2013 17:23:12 -0400

Navigation 2.1.7

	* Updated navigation to work with Core 2.5.6
	-- Charlie Powell <charlie@eval.bz>  Wed, 05 Jun 2013 05:07:27 -0400

Navigation 2.1.6

	* updated nav widget template to include class name of the link target

Navigation 2.1.5

	* New nagivagion widget - children.  Displays the children of the current page.
	-- Charlie Powell <charlie@eval.bz>  Wed, 20 Feb 2013 17:30:03 -0500

Navigation 2.1.4

	* Set the Siblings navigation widget to respect the selectable flag.
	-- Charlie Powell <charlie@eval.bz>  Sat, 09 Feb 2013 23:56:59 -0500

Navigation 2.1.3

	* [Feature] Added multisite support.
	-- Charlie Powell <charlie@eval.bz>  30 Dec 2012

Navigation 2.1.2

	* [Bug] Fixed the multiple "more" class that was showing for navigation entries with more than one
	  child.
	* [Feature] Added an "active" class on the active navigation entry.
	-- Charlie Powell <charlie@eval.bz>  5 Nov 2012

Navigation 2.1.1

	* [Bug] Fixed minor js bug with editing entries.
	-- Charlie Powell <charlie@eval.bz>  17 Oct 2012
