@@ -1,3 +1,8 @@
+Navigation 2.1.8-1~bpo268
+
+	* Better descriptions in the component metafile
+	-- Charlie Powell <support@corepl.us>  Mon, 27 Feb 2017 04:07:47 -0500
+
 Navigation 2.1.8
 
 	* Updated some minor things to keep up to date with Core 2.5.7
